--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sweetalert2": "^11.25.0"
+    "sweetalert2": "^11.25.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
